fixed some stuff including wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
 * {
   font-family: Rubik;
   color: #FFF;
+  overflow: auto;
 }
 
 #item {
